# Genixer

./: README.md
Genixer_LLaVA/: README.md  model_genixer_eval.py  pyproject.toml
Genixer_LLaVA/fuyudatafiltering/: GenQA_filtering_mp.py
Genixer_LLaVA/llava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Genixer_LLaVA/llava/eval/: eval_gpt_review_bench.py  model_vqa_loader.py  summarize_gpt_review.py
Genixer_LLaVA/llava/train/: train.py  train_mem.py
Genixer_LLaVA/scripts/: finetune.sh  fuyudatafilter.sh  pretrain.sh  train_genixer.sh
Genixer_LLaVA/scripts/eval/: gqa.sh  llavabench.sh  mmbench.sh  mmbench_cn.sh  mme.sh  mmvet.sh  pope.sh  seed.sh  sqa.sh  textvqa.sh  vizwiz.sh  vqav2.sh
Genixer_LLaVA/scripts/eval_genixer/: generic_generation.sh  specific_Adv_generation.sh  specific_MCVQA_generation.sh  specific_MD_generation.sh  specific_common_generation.sh
Genixer_Shikra/: README.md  model_transform.sh  multiprocess_evalclipscore.py  requirements.txt  run_eval_genixer.sh  run_eval_genqa.sh  run_eval_rec.sh  run_genixer_shikra_stage0.sh  run_genixer_shikra_stage1.sh  run_genixer_shikra_stage2.sh  run_genixer_stage1.sh  run_genixer_stage2.sh
Genixer_Shikra/config/: eval_multi_rec.py  genixer_eval_GenQA.py  genixer_pretrain_GenQA_stage1.py  genixer_pretrain_GenQA_stage1_lora.py  genixer_pretrain_GenQA_stage2.py  genixer_pretrain_GenQA_stage2_lora.py  pretrain_concat3_stage0.py  pretrain_concat8_stage1.py  pretrain_final55_stage2.py
Genixer_Shikra/mllm/config/: config.py
Genixer_Shikra/mllm/engine/: __init__.py  base_engine.py  builder.py  (+1 more)
(+36 files in other folders)
