[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Genixer-llava"
version = "0.1.0"
description = "An automatic instruction data generation pipelien."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.10.0", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "bitsandbyte",
    "datasets==2.19.0", "deepspeed==0.12.6", "ninja", "wandb", "flash-attn==2.5.7"
]


[tool.setuptools.packages.find]
exclude = ["playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["playground*", "scripts*", "tests*"]
